# block-blast-ds

./: CMakeLists.txt  README.md
src/core/: game.c  game.h  main.c  piece.c  piece.h
src/input/: input.c  input.h
src/platform/: platform.h
src/platform/nds/: input_nds.c  main.c  render_nds.c
src/platform/pc/: main_pc.c
src/rendering/: render.c  render.h
